fixed the scrollbar and the overflow problem

--- a/assest/css/Cloningtube.css
+++ b/assest/css/Cloningtube.css
@@ -46,7 +46,8 @@
     margin-left: 11px;
 }
 .main-element{
-    width: 90%;
+    display: flex;
+    width: 97%;
     height: auto;
     margin-left:15px;
 }
@@ -96,7 +97,7 @@ iframe{
 .subscribe-button{
     height: 30px;
     position: absolute;
-    margin-left: 840px;
+    margin-left: 681px;
     margin-top:-31px;
     background-color: red;
     color: white;
